rating done with reviews on homescreen

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Wellcome to Pro Shop</title>
+    <title>ProShop</title>
   </head>
 
   <body>
